# server/docs/swagger.yaml
@@ -1,8 +1,8 @@
 swagger: "2.0"
 info:
-  description: "Simple API to manage tasks"
+  description: "Simple API to manage posts"
   version: "1.0.0"
-  title: "tasks API"
+  title: "posts API"
 host: "localhost:3000"
 basePath: "/"
 consumes:
@@ -10,14 +10,14 @@ consumes:
 produces:
 - "application/json"
 tags:
-- name: "task"
-  description: "operations on tasks"
+- name: "post"
+  description: "operations on posts"
 paths:
-  /tasks:
+  /posts:
     get:
       tags:
-      - "task"
-      summary: "Get a list of tasks"
+      - "post"
+      summary: "Get a list of posts"
       description: ""
       parameters: 
       - in: "query"
@@ -40,20 +40,20 @@ paths:
           schema:
             type: 'array'
             items: 
-              $ref: '#/definitions/task'
+              $ref: '#/definitions/post'
     post:
       tags:
-      - "task"
-      summary: "Add a new task"
+      - "post"
+      summary: "Add a new post"
       description: ""
       parameters:
       - in: "body"
-        name: "task"
-        description: "task object that needs to be added in DB"
+        name: "post"
+        description: "post object that needs to be added in DB"
         required: true
         schema:
           allOf:
-           - $ref: "#/definitions/taskEditableAttributes"
+           - $ref: "#/definitions/postEditableAttributes"
            - type: 'object'
              required:
               - "name"
@@ -61,35 +61,35 @@ paths:
         "201":
           description: "Created"
           schema:
-            $ref: "#/definitions/task"
+            $ref: "#/definitions/post"
         "422":
           $ref: '#/responses/unprocessableEntity'
         "409":
           $ref: '#/responses/conflict'
-  /tasks/{taskId}:
+  /posts/{postId}:
     put:
       tags:
-      - "task"
-      summary: "Update an existing task"
+      - "post"
+      summary: "Update an existing post"
       description: ""
       parameters:
-      - name: "taskId"
+      - name: "postId"
         in: "path"
-        description: "ID of task to return"
+        description: "ID of post to return"
         required: true
         type: "integer"
         format: "int64"
       - in: "body"
-        name: "task"
-        description: "task object that needs to be updated"
+        name: "post"
+        description: "post object that needs to be updated"
         required: true
         schema:
-          $ref: "#/definitions/taskEditableAttributes"
+          $ref: "#/definitions/postEditableAttributes"
       responses:
         "200":
           description: "Updated"
           schema:
-            $ref: "#/definitions/task"       
+            $ref: "#/definitions/post"       
         "404":
           $ref: '#/responses/notFound'
         "409":
@@ -121,7 +121,7 @@ definitions:
         items: 
           type: 'object'
 
-  taskEditableAttributes:
+  postEditableAttributes:
     type: "object"
     properties:
       name:
@@ -130,12 +130,12 @@ definitions:
       done: 
         type: "boolean"
 
-  task:
+  post:
     allOf: 
       - type: "object"
         properties:
           id:
             type: "integer"
             format: "int64"
-      - $ref: '#/definitions/taskEditableAttributes'
+      - $ref: '#/definitions/postEditableAttributes'
       
